# myuv

./: .gitignore  license.txt  readme.txt
.github/workflows/: tauri-build.yml
chat/: chat.css  chat.js  index.html  index_new.html
src-tauri/: Cargo.toml  README.md  tauri.conf.json  tauri.ps1  tauri.sh
src-tauri/rag_app/: README.md  index.html
src-tauri/rag_app/libs/pdfjs/web/: custom-viewer.js  viewer.css  viewer.html  viewer.js  watermark.js
tmp/node-compile-cache/v24.10.0-x64-ef5a0af0-0/: 0072c192  0198871c  026ffbef  029af877  044fba48  04d4b539  054e9a20  0562658b  057ed621  05c31bf2  06433ccf  06aa9b36  06fbd1ac  087e5c5c  089aa569  09c91eab  09cdfd61  09e06b44  0aadd2ae  0aba0657  0ae8c31b  0b65557f  0ba36ac0  0bab73d8  0c1337ac  0c3f2ae8  0c60dd9e  0c70acb6  0cc27df9  0cc4c0a5  0cf3448b  0d189ce4  0d34b97d  0d4498af  0de6df38  0e49f1eb  0e75f55a  10140617  10d7039f  10e2c58a  (+528 more)
