[package]
name = "rag-app"
version = "0.1.0"
description = "RAG app desktop shell"
authors = ["Your Name"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.5.2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
